--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^3.0.7",
+    "date-fns": "^3.3.1",
+    "date-fns-tz": "^3.2.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.8.1",
-    "socket.io-client": "^4.7.4",
     "react-parallax": "^3.5.1",
-    "@stripe/stripe-js": "^3.0.7",
     "react-router-dom": "^6.22.3",
-    "date-fns": "^3.3.1"
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
